<resources>
    <string name="app_name">Scouting App 2018</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="increase_value">+</string>
    <string name="decrease_value">-</string>
    <string name="scale_auto">0</string>
    <string name="start_match">Start</string>
    <string name="team_number">Team Number</string>
    <string name="match_number">Match Number</string>
    <string name="alliance_color">Alliance Color</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="auto">AUTO</string>
    <string name="tele_op">TELE-OP</string>
    <string name="notes">NOTES</string>
    <string name="scale_cubes">Power Cubes to Scale</string>
    <string name="switch_cubes">Power Cubes to Friendly Switch</string>
    <string name="deliver_cubes">Power Cubes Delivered to Humans</string>
    <string name="switch_auto">0</string>
    <string name="delivered_auto">0</string>
    <string name="baseline">Baseline Crossed</string>
    <string name="crossed_baseline">Yes</string>
    <string name="stayed_still">No</string>
    <string name="scale_tele">0</string>
    <string name="switch_tele">0</string>
    <string name="opp_switch">0</string>
    <string name="opp_switch_cubes">Power Cubes Delivered to Opponent Switch</string>
    <string name="delivered_tele">0</string>
    <string name="climb">Climbing</string>
    <string name="can_climb">Yes</string>
    <string name="can_not_climb">No</string>
    <string name="team_climb">Team</string>
    <string name="note_input">Notes</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
</resources>
