<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guestaccount.scoutingapp2018.Autonomous">

    <Button
        android:id="@+id/button5"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:onClick="Notes"
        android:text="@string/notes"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:onClick="Teleop"
        android:text="@string/tele_op"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="175dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/scale_auto"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/scale_cubes"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/increase_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/switch_cubes"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="175dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/switch_auto"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/deliver_cubes"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="175dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/delivered_auto"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="16dp"
        android:text="@string/stayed_still"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/crossed_baseline"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button16"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/baseline"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:text="@string/auto"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
