<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guestaccount.scoutingapp2018.Notes">

    <Button
        android:id="@+id/tele_notes"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:onClick="Teleop"
        android:text="@string/tele_op"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/notes_notes"
        app:layout_constraintStart_toEndOf="@+id/auto_notes" />

    <Button
        android:id="@+id/auto_notes"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:onClick="Autonomous"
        android:text="@string/auto"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tele_notes"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/notes_notes"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:text="@string/notes"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
